fix(VtkView): Provide background contrast for floating buttons

--- a/src/components/core/VtkView/style.css
+++ b/src/components/core/VtkView/style.css
@@ -22,6 +22,8 @@
   z-index: 1;
   right: 10px;
   top: 10px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 16px;
 }
 
 .activeButton {
